[gd_scene load_steps=11 format=2]

[ext_resource path="res://GameBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameChallenge.gd" type="Script" id=2]
[ext_resource path="res://DottedLine.gd" type="Script" id=3]
[ext_resource path="res://theme.tres" type="Theme" id=4]
[ext_resource path="res://LineOfPebbles.gd" type="Script" id=5]
[ext_resource path="res://sounds/endgame_ruffle.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 145, 306 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 140.292, 15 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 252.688 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 485.214 )

[node name="GameChallenge" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Floor" parent="." index="2"]
collision_layer = 3

[node name="RockSpawnBox" type="Node" parent="." index="4"]

[node name="TopLeft" type="Position2D" parent="RockSpawnBox" index="0"]
position = Vector2( 42.3785, 282.81 )

[node name="BotRight" type="Position2D" parent="RockSpawnBox" index="1"]
position = Vector2( 228.844, 447.629 )

[node name="LineOfPebbles" type="Line2D" parent="." index="5"]
points = PoolVector2Array( 278, 600, 278, 545 )
width = 5.0
default_color = Color( 0.909804, 0.0666667, 0.956863, 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="ThrowZone" type="Area2D" parent="LineOfPebbles" index="0"]
position = Vector2( 133, 300 )
collision_layer = 3
collision_mask = 3
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="LineOfPebbles/ThrowZone" index="0"]
shape = SubResource( 1 )

[node name="ThrowZoneFloor" type="Area2D" parent="LineOfPebbles" index="1"]
position = Vector2( 137.811, 583.232 )
collision_layer = 3
collision_mask = 3
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="LineOfPebbles/ThrowZoneFloor" index="0"]
shape = SubResource( 2 )

[node name="ThrowZoneBarrier" type="StaticBody2D" parent="LineOfPebbles" index="2"]
position = Vector2( 137.74, 348.324 )
collision_layer = 2
collision_mask = 2147483648
__meta__ = {
"_edit_lock_": true,
"_editor_description_": "A temporary barrier that helps guide newly spawned rocks in the throw zone"
}

[node name="LeftWall" type="CollisionShape2D" parent="LineOfPebbles/ThrowZoneBarrier" index="0"]
position = Vector2( -147.25, 0 )
shape = SubResource( 3 )

[node name="RightWall" type="CollisionShape2D" parent="LineOfPebbles/ThrowZoneBarrier" index="1"]
position = Vector2( 149.919, 236.155 )
shape = SubResource( 4 )

[node name="DottedLine" type="Position2D" parent="LineOfPebbles" index="3"]
position = Vector2( 278.149, 535.951 )
script = ExtResource( 3 )
line_width = 3
line_color = Color( 1, 1, 1, 1 )
dash_length = 10
gap_length = 15
line_num_dashes = 25

[node name="DelayTillSpawnTarget" type="Timer" parent="." index="7"]
one_shot = true
__meta__ = {
"_editor_description_": "How long to wait after target rock is knocked off before spawning a new target rock"
}

[node name="DelayTillEndGame" type="Timer" parent="." index="8"]
wait_time = 0.5
one_shot = true
__meta__ = {
"_editor_description_": "How long to wait after player is out of rocks before actually ending the game-- we wait to give the last target rock a chance to finish falling."
}

[node name="EndGameFailsafe" type="Timer" parent="." index="9"]
wait_time = 6.0
one_shot = true
__meta__ = {
"_editor_description_": "A longer timer that triggers after the number of remaining rocks is 0 for long enough. This is just in case the \"DelayTillEndGame\" one isn't triggered for some reason (e.g. in low gravity when rocks float straight up for too long)"
}

[node name="EndgameRufflePlayer" type="AudioStreamPlayer" parent="." index="10"]
stream = ExtResource( 6 )
volume_db = -4.0

[node name="StatusText" type="MarginContainer" parent="." index="12"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 776.0
margin_top = 548.0
margin_right = 1055.0
margin_bottom = 600.0
custom_constants/margin_right = 8
custom_constants/margin_bottom = 8
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="StatusText" index="0"]
margin_right = 271.0
margin_bottom = 44.0

[node name="ThrowingRocksRemainingLabel" type="Label" parent="StatusText/VBoxContainer" index="0"]
margin_right = 271.0
margin_bottom = 20.0
theme = ExtResource( 4 )
text = "Throwing Rocks Remaining: 0/0"
align = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ScoreLabel" type="Label" parent="StatusText/VBoxContainer" index="1"]
margin_top = 24.0
margin_right = 271.0
margin_bottom = 44.0
theme = ExtResource( 4 )
text = "Rocks Knocked: 0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="rock_lost" from="LineOfPebbles" to="." method="_on_LineOfPebbles_rock_lost"]
[connection signal="rock_regained" from="LineOfPebbles" to="." method="_on_LineOfPebbles_rock_regained"]
[connection signal="body_entered" from="LineOfPebbles/ThrowZone" to="LineOfPebbles" method="_on_ThrowZone_body_entered"]
[connection signal="body_exited" from="LineOfPebbles/ThrowZone" to="LineOfPebbles" method="_on_ThrowZone_body_exited"]
[connection signal="mouse_entered" from="LineOfPebbles/ThrowZone" to="." method="_on_ThrowZone_mouse_entered"]
[connection signal="mouse_exited" from="LineOfPebbles/ThrowZone" to="." method="_on_ThrowZone_mouse_exited"]
[connection signal="body_entered" from="LineOfPebbles/ThrowZoneFloor" to="LineOfPebbles" method="_on_ThrowZoneFloor_body_entered"]
[connection signal="body_exited" from="LineOfPebbles/ThrowZoneFloor" to="LineOfPebbles" method="_on_ThrowZoneFloor_body_exited"]
[connection signal="timeout" from="DelayTillSpawnTarget" to="." method="place_new_target_rock"]
[connection signal="timeout" from="DelayTillEndGame" to="." method="_on_DelayTillEndGame_timeout"]
[connection signal="timeout" from="EndGameFailsafe" to="." method="_on_DelayTillEndGame_timeout"]
[connection signal="finished" from="EndgameRufflePlayer" to="." method="_on_EndgameRufflePlayer_finished"]
